feat(fe): AI goal planner
